fix spacing on merch loading page & update shows page

--- a/frontend/src/components/Pages/Merch/Merch.css
+++ b/frontend/src/components/Pages/Merch/Merch.css
@@ -59,3 +59,9 @@
 .swiper-slide:hover {
     cursor: pointer;
 }
+
+
+
+.merch-loading {
+    height: 70vh;
+}
